--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,62 @@
-# Compiled class file
-*.class
+### gradle ###
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
 
-# Log file
-*.log
-*.gz
+### STS ###
+.settings/
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+bin/
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-### Intellij Patch ###
-*.iml
+### IntelliJ IDEA ###
 .idea
+*.iws
+*.iml
+*.ipr
+*.lock
+rebel.xml
 
-# Package Files #
-*.jar
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+### maven ###
+target/
 *.war
-*.nar
 *.ear
 *.zip
+*.tar
 *.tar.gz
-*.rar
-.settings
-target
-.classpath
-.project
+
+### logs ####
+/logs/
+*.log
+
+### temp ignore ###
+*.cache
+*.diff
+*.patch
+*.tmp
+*.java~
+*.properties~
+*.xml~
+
+### system ignore ###
+.DS_Store
+Thumbs.db
+Servers
 .metadata
-.springBeans
-.factorypath
+upload
+gen_code
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-target
-logs
-
+### node ###
+node_modules
